WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204931
[LFC][IFC] Fix css1/basic/containment.html
https://bugs.webkit.org/show_bug.cgi?id=204931
Summary
[LFC][IFC] Fix css1/basic/containment.html
alan
Reported
2019-12-05 16:52:55 PST
IFC produces wrong line layout
Attachments
Patch
(2.27 KB, patch)
2019-12-05 17:05 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-12-05 16:53:16 PST
<
rdar://problem/57682871
>
alan
Comment 2
2019-12-05 17:05:26 PST
Created
attachment 384980
[details]
Patch
WebKit Commit Bot
Comment 3
2019-12-05 19:46:31 PST
Comment on
attachment 384980
[details]
Patch Clearing flags on attachment: 384980 Committed
r253200
: <
https://trac.webkit.org/changeset/253200
>
WebKit Commit Bot
Comment 4
2019-12-05 19:46:32 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug