[LFC][IFC] Fix css1/basic/containment.html https://bugs.webkit.org/show_bug.cgi?id=204931 <rdar://problem/57682871>

Reviewed by Simon Fraser.

moveToNextBreakablePosition jumped over all the positions that came back as the current position.
e.g --- <- first 2 breakable positions are at: 1 2 but we skipped over the first one.

* layout/inlineformatting/InlineTextItem.cpp:
(WebCore::Layout::moveToNextBreakablePosition):


Canonical link: https://commits.webkit.org/218149@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253200 268f45cc-cd09-0410-ab3c-d52691b4dbfc